--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.2.0-pre"
 authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
 license = "GPL-3.0+"
 edition = "2018"
+keywords = ["gameboy"]
 categories = ["emulators"]
 
 [dependencies]
